# erold-code

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  WORKFLOW.md  WORKFLOW_EXECUTION_GRAPH.txt
.erold/: project.json
crates/erold-api/: Cargo.toml
crates/erold-api/src/: client.rs  error.rs  guidelines.rs  lib.rs  models.rs  v2.rs
crates/erold-config/: Cargo.toml
crates/erold-config/src/: credentials.rs  error.rs  lib.rs  loader.rs  types.rs
crates/erold-llm/: Cargo.toml
crates/erold-llm/src/: client.rs  error.rs  lib.rs  models.rs
crates/erold-tools/: Cargo.toml
crates/erold-tools/src/: error.rs  lib.rs  registry.rs
crates/erold-tools/src/tools/: bash.rs  edit_file.rs  mod.rs  read_file.rs  search.rs  write_file.rs
crates/erold-tui/: Cargo.toml
crates/erold-tui/src/: error.rs  events.rs  lib.rs  terminal.rs
crates/erold-tui/src/views/: chat.rs  mod.rs  plan.rs  progress.rs
crates/erold-web/: Cargo.toml
crates/erold-web/src/: content.rs  error.rs  fetcher.rs  lib.rs
crates/erold-web/src/parsers/: crates.rs  docs.rs  github.rs  mod.rs  npm.rs
crates/erold-workflow/: Cargo.toml
crates/erold-workflow/src/: config.rs  context.rs  engine.rs  error.rs  events.rs  lib.rs  repository.rs  security.rs  state.rs
crates/erold-workflow/src/phases/: enrich.rs  execute.rs  mod.rs  plan.rs  preprocess.rs
docs/: EROLD_API.md  workflow-roadmap.md
src/: agent.rs  main.rs  ui.rs
