[package]
name = "erold-config"
description = "Configuration management for the Erold CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
directories.workspace = true
tracing.workspace = true

[lints]
workspace = true
