[package]
name = "erold-llm"
description = "LLM integration for the Erold CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.10"

erold-tools.workspace = true

[lints]
workspace = true
