[package]
name = "erold-tools"
description = "Tool implementations for the Erold CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

erold-workflow.workspace = true

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
