[package]
name = "erold-tui"
description = "Terminal UI for the Erold CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
