[package]
name = "erold-web"
description = "Web fetching for knowledge refresh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
scraper = "0.23"
regex = "1.11"
url = "2.5"

[lints]
workspace = true
