[package]
name = "erold-workflow"
description = "Workflow engine for the Erold CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true

erold-api.workspace = true

[lints]
workspace = true
